@@ -31,7 +31,6 @@ import cascading.flow.Flow;
 import cascading.management.state.ClientState;
 import cascading.property.AppProps;
 
-
 /** Class FlowStats collects {@link cascading.flow.Flow} specific statistics. */
 public class FlowStats extends CascadingStats
   {
@@ -101,7 +100,7 @@ public class FlowStats extends CascadingStats
     {
     Set<String> results = new HashSet<String>();
 
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       results.addAll( flowStepStats.getCounterGroups() );
 
     return results;
@@ -112,7 +111,7 @@ public class FlowStats extends CascadingStats
     {
     Set<String> results = new HashSet<String>();
 
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       results.addAll( flowStepStats.getCounterGroupsMatching( regex ) );
 
     return results;
@@ -123,7 +122,7 @@ public class FlowStats extends CascadingStats
     {
     Set<String> results = new HashSet<String>();
 
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       results.addAll( flowStepStats.getCountersFor( group ) );
 
     return results;
@@ -134,7 +133,7 @@ public class FlowStats extends CascadingStats
     {
     long value = 0;
 
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       value += flowStepStats.getCounterValue( counter );
 
     return value;
@@ -145,7 +144,7 @@ public class FlowStats extends CascadingStats
     {
     long value = 0;
 
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       value += flowStepStats.getCounterValue( group, counter );
 
     return value;
@@ -154,7 +153,7 @@ public class FlowStats extends CascadingStats
   @Override
   public void captureDetail()
     {
-    for( FlowStepStats flowStepStats : flowStepStatsList )
+    for( FlowStepStats flowStepStats : getFlowStepStats() )
       flowStepStats.captureDetail();
     }
 
@@ -174,5 +173,22 @@ public class FlowStats extends CascadingStats
   public String toString()
     {
     return "Flow{" + getStatsString() + '}';
+    }
+
+  @Override
+  public int hashCode()
+    {
+    return getID().hashCode();
+    }
+
+  @Override
+  public boolean equals( Object object )
+    {
+    if( this == object )
+      return true;
+    if( object == null || !( object instanceof FlowStats ) )
+      return false;
+
+    return getID().equals( ( (FlowStats) object ).getID() );
     }
   }
